// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`WorldTime full screen toggle button should render LuShrink icon when in full screen mode 1`] = `
<div>
  <div>
    <div
      class="flex flex-col justify-between py-2 xl:p-4 min-h-screen"
    >
      <div
        class="flex flex-col gap-2 sm:gap-4"
      >
        <div
          data-testid="year-date"
        />
        <div
          class="max-w-1/3 lg:max-w-1/4 text-[8px] sm:text-base lg:text-lg xl:text-xl"
          style="transform: translateX(0vw);"
        >
          <div
            data-testid="calendar"
            data-value="2024-01-14T22:00:00.000Z"
          />
        </div>
        <div
          data-classnames-time="className"
          data-testid="world-time-clock"
        />
      </div>
      <div
        class="py-4"
      >
        <div
          data-testid="controls"
          data-zone-index="0"
        />
      </div>
      <div
        class="sticky bottom-6 flex justify-end pointer-events-none"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer pointer-events-auto"
          data-slot="button"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m15 15 6 6m-6-6v4.8m0-4.8h4.8"
            />
            <path
              d="M9 19.8V15m0 0H4.2M9 15l-6 6"
            />
            <path
              d="M15 4.2V9m0 0h4.8M15 9l6-6"
            />
            <path
              d="M9 4.2V9m0 0H4.2M9 9 3 3"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`WorldTime should render correctly 1`] = `
<div>
  <div>
    <div
      data-testid="tool-page-heading"
    >
      <span>
        worldTime:title
      </span>
      <span>
        worldTime:subtitle
      </span>
    </div>
    <div
      class="flex flex-col justify-between py-2 xl:p-4 min-h-96"
    >
      <div
        class="flex flex-col gap-2 sm:gap-4"
      >
        <div
          data-testid="year-date"
        />
        <div
          class="max-w-1/3 lg:max-w-1/4 text-[8px] sm:text-base lg:text-lg xl:text-xl"
          style="transform: translateX(0vw);"
        >
          <div
            data-testid="calendar"
            data-value="2024-01-14T22:00:00.000Z"
          />
        </div>
        <div
          data-classnames-time="className"
          data-testid="world-time-clock"
        />
      </div>
      <div
        class="py-4"
      >
        <div
          data-testid="controls"
          data-zone-index="0"
        />
      </div>
      <div
        class="sticky bottom-6 flex justify-end pointer-events-none"
      >
        <button
          class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive bg-primary text-primary-foreground shadow-xs hover:bg-primary/90 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer pointer-events-auto"
          data-slot="button"
        >
          <svg
            fill="none"
            height="1em"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-6-6m6 6v-4.8m0 4.8h-4.8"
            />
            <path
              d="M3 16.2V21m0 0h4.8M3 21l6-6"
            />
            <path
              d="M21 7.8V3m0 0h-4.8M21 3l-6 6"
            />
            <path
              d="M3 7.8V3m0 0h4.8M3 3l6 6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
